<resources>
    <string name="app_name">TUBES</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="list">list</string>
    <string name="grid">grid</string>
    <string name="fontSize">Font Size</string>
    <string name="judul_foto">Judul Foto</string>
    <string name="diary_list">Diary List</string>
    <string name="back">BACK</string>
    <string name="save">save</string>
    <string name="photo_diary">Photo Diary</string>
    <string name="deskripsi">Photo Diary adalah aplikasi yang dapat membantu untuk menyimpan dan berinteraksi dengan foto Anda. Aplikasi ini dapat berfungsi untuk menyimpan gambar dari kamera ponsel, galeri penyimpanan foto, serta buku harian untuk setiap foto Anda.</string>
    <string name="author">Author :\nDoni Andrian \nAldi Rivandi \nKevin Jo</string>
    <string name="title">Title</string>
    <string name="titlehint">Title...</string>
    <string name="description">Description</string>
    <string name="descriptionhint">Description...</string>
    <string name="save2">Save</string>
    <string name="title2">Title</string>
    <string name="hint_detail">...............</string>
    <string name="description_det">Description</string>
    <string name="description_det_hint">Description...</string>
    <string name="story">Story...</string>
    <string name="judul_photo_diary">Photo Diary</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="font_size">Font Size</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="display_date_amp_time"><![CDATA[Display Date & Time]]></string>
    <string name="about">About</string>
    <string name="judul_foto_tampilan">Judul Foto</string>
    <string name="tanggal_foto">Tanggal Foto</string>
</resources>
