<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    >

    <TextView
        android:id="@+id/textPhotoDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/photo_diary"
        android:textSize="30dp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/textDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPhotoDiary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deskripsi"

        android:textSize="17dp"
        android:textStyle="bold" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDeskripsi"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:text="@string/author"
        android:textSize="17dp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"


        />


</RelativeLayout>