<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_photo_detail"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/ll_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_photo_detail">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/title2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/photo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:hint="Photo"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_file">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/hint_detail"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_date"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/description_det"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_description"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/description_det_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/text_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_description"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="Story"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_story"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/story"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_edit"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/orange"
            android:src="@android:drawable/ic_menu_edit" />


    </RelativeLayout>
</ScrollView>
